remove unnecessary files

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -7,7 +7,7 @@
     "postinstall": "echo \"Creating empty 'development.ts' it does not exist…\" && [[ ! -e deployments/greeter/development.ts ]] && (command -v touch &> /dev/null && touch deployments/greeter/development.ts || copy /b deployments/greeter/development.ts +,,); true",
     "test": "./test-all.sh",
     "build": "./build-all.sh",
-    "node": "substrate-contracts-node --dev --port 9944 --base-path ./.node-data",
+    "node": "substrate-contracts-node --dev",
     "script": "ts-node --cwd=scripts",
     "deploy": "pnpm run script deploy",
     "contracts-ui": "open https://contracts-ui.substrate.io/?rpc=ws://127.0.0.1:9944",
