--- a/contracts/src/password_manager/Cargo.toml
+++ b/contracts/src/password_manager/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "greeter"
+name = "password_manager"
 version = "0.0.1"
 authors = ["Scio Labs <hello@scio.xyz>"]
 edition = "2021"
