--- a/contracts/src/password_manager/Cargo.toml
+++ b/contracts/src/password_manager/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 
 [dependencies]
 ink = { version = "4.3.0", default-features = false }
+hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
+
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
