--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@azns/resolver-core": "^1.6.0",
     "@azns/resolver-react": "^1.6.0",
     "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.1",
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.1",
@@ -38,6 +39,7 @@
     "@polkadot/util": "^12.5.1",
     "@polkadot/util-crypto": "^12.5.1",
     "@scio-labs/use-inkathon": "^0.2.0",
+    "@xstate/react": "^4.1.0",
     "framer-motion": "^10.16.4",
     "next": "^13.5.6",
     "next-seo": "^6.1.0",
@@ -48,7 +50,8 @@
     "react-icons": "^4.11.0",
     "sharp": "^0.32.6",
     "spinners-react": "^1.0.7",
-    "use-async-effect": "^2.2.7"
+    "use-async-effect": "^2.2.7",
+    "xstate": "^5.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
