--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "@polkadot/util": "^12.5.1",
     "@polkadot/util-crypto": "^12.5.1",
     "@scio-labs/use-inkathon": "^0.2.0",
+    "@types/uuid": "^9.0.8",
     "@xstate/react": "^4.1.0",
     "framer-motion": "^10.16.4",
     "next": "^13.5.6",
@@ -51,6 +52,7 @@
     "sharp": "^0.32.6",
     "spinners-react": "^1.0.7",
     "use-async-effect": "^2.2.7",
+    "uuid": "^9.0.1",
     "xstate": "^5.7.0"
   },
   "devDependencies": {
