--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "react-icons": "^4.11.0",
     "sharp": "^0.32.6",
     "spinners-react": "^1.0.7",
+    "update-browserslist-db": "^1.0.16",
     "use-async-effect": "^2.2.7",
     "uuid": "^9.0.1",
     "xstate": "^5.7.0"
