--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,14 +30,18 @@
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@inkathon/contracts": "workspace:*",
-    "@polkadot/api": "^10.10.1",
-    "@polkadot/api-contract": "^10.10.1",
-    "@polkadot/extension-dapp": "^0.46.5",
-    "@polkadot/extension-inject": "^0.46.5",
-    "@polkadot/keyring": "^12.5.1",
-    "@polkadot/types": "^10.10.1",
-    "@polkadot/util": "^12.5.1",
-    "@polkadot/util-crypto": "^12.5.1",
+    "@polkadot/api": "^11.0.2",
+    "@polkadot/api-contract": "^11.0.2",
+    "@polkadot/extension-dapp": "^0.47.3",
+    "@polkadot/extension-inject": "^0.47.3",
+    "@polkadot/keyring": "^12.6.2",
+    "@polkadot/types": "^11.0.2",
+    "@polkadot/util": "^12.6.2",
+    "@polkadot/util-crypto": "^12.6.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@scio-labs/use-inkathon": "^0.2.0",
     "@types/uuid": "^9.0.8",
     "@xstate/react": "^4.1.0",
