--- a/contracts/package.json
+++ b/contracts/package.json
@@ -9,7 +9,7 @@
     "build": "./build-all.sh",
     "node": "substrate-contracts-node --dev",
     "script": "ts-node --cwd=scripts",
-    "deploy": "pnpm run script deploy",
+    "deploy": "ts-node scripts/deploy",
     "contracts-ui": "open https://contracts-ui.substrate.io/?rpc=ws://127.0.0.1:9944",
     "explorer-ui": "open https://polkadot.js.org/apps/#/explorer?rpc=ws://127.0.0.1:9944",
     "type-check": "tsc --pretty --noEmit",
@@ -19,12 +19,12 @@
     "eslint": "eslint . --ext .js,.ts"
   },
   "devDependencies": {
-    "@polkadot/api": "^10.10.1",
-    "@polkadot/api-contract": "^10.10.1",
-    "@polkadot/keyring": "^12.5.1",
-    "@polkadot/types": "^10.10.1",
-    "@polkadot/util": "^12.5.1",
-    "@polkadot/util-crypto": "^12.5.1",
+    "@polkadot/api": "^11.0.2",
+    "@polkadot/api-contract": "^11.0.2",
+    "@polkadot/keyring": "^12.6.2",
+    "@polkadot/types": "^11.0.2",
+    "@polkadot/util": "^12.6.2",
+    "@polkadot/util-crypto": "^12.6.2",
     "@scio-labs/use-inkathon": "^0.2.0",
     "@types/node": "^18.18.6",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
