--- a/contracts/keyvault/Cargo.toml
+++ b/contracts/keyvault/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "keyvault"
-version = "1.0.0"
-authors = ["lousydropout <lousydropout@gmail.com>"]
+name = "my_contract"
+version = "0.1.0"
+authors = ["[your_name] <[your_email]>"]
 edition = "2021"
 
 [dependencies]
-ink = { version = "=5.0.0-rc", default-features = false }
+ink = { version = "4.2.0", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
@@ -18,6 +18,10 @@ path = "lib.rs"
 
 [features]
 default = ["std"]
-std = ["ink/std", "scale/std", "scale-info/std"]
+std = [
+    "ink/std",
+    "scale/std",
+    "scale-info/std",
+]
 ink-as-dependency = []
 e2e-tests = []
